# Cursor

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.py  notify.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
src/analysis/: ai_analyzer.py  indicators.py  risk_manager.py
src/backtesting/: backtest_engine.py
src/config/: config.py
src/strategies/: base_strategy.py  multi_timeframe_strategy.py
src/tests/unit/: test_ai_analyzer.py  test_indicators.py  test_risk_manager.py
src/utils/: backtester.py  config_manager.py  error_handler.py  logger.py  monitor.py
